MaybeParseAsGeneratorForScope sometimes loses track of its scope ref https://bugs.webkit.org/show_bug.cgi?id=198969 <rdar://problem/51620714>

Reviewed by Tadeu Zagallo.

JSTests:

* stress/nested-yield-in-arrow-function-should-be-a-syntax-error.js: Added.
(catch):

Source/JavaScriptCore:

Sometimes if the parser has enough nested scopes
MaybeParseAsGeneratorForScope can lose track of the ScopeRef it
should be tracking. This is because the parser sometimes relocates
its ScopeRefs. To fix this MaybeParseAsGeneratorForScope should
hold the scope ref it's watching.

* parser/Parser.cpp:
(JSC::Scope::MaybeParseAsGeneratorForScope::MaybeParseAsGeneratorForScope):
(JSC::Scope::MaybeParseAsGeneratorForScope::~MaybeParseAsGeneratorForScope):


Canonical link: https://commits.webkit.org/212941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246549 268f45cc-cd09-0410-ab3c-d52691b4dbfc